--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
 # Source files
-file(GLOB SOURCES "src/*.cpp")  # Assuming your source files are in src/
+file(GLOB SOURCES "src/*.cpp")
 
 # Main executable target
 add_executable(LARGETD main.cpp ${SOURCES})
